--- a/web.cyberminer/src/main/webapp/stylesheets/css/cyberminer.css
+++ b/web.cyberminer/src/main/webapp/stylesheets/css/cyberminer.css
@@ -24,3 +24,12 @@
   	width: 100%;
   	height: 75px;
 }
+
+h1 {
+	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-size: 24px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 500;
+	line-height: 26.4px;
+}
