--- a/web.cyberminer/src/main/webapp/stylesheets/css/kwic.css
+++ b/web.cyberminer/src/main/webapp/stylesheets/css/kwic.css
@@ -26,3 +26,19 @@
 body {
     background-color: rgb(231,230,230);
 }
+
+.message { 
+  	width: 50%;
+  	margin: auto;
+  	text-align:center;
+  	margin-top: 15px;
+ }
+ 
+ .toolbar { 
+  	width: 100%;
+  	height: 75px;
+}
+
+#cyberminer {
+	cursor: pointer;
+}
